<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.froositadwi.explorelombok.MainActivity"
    android:background="@color/cardview_light_background">
    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:elevation="30dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@android:color/background_light"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/lombokmaps" />
            <TextView
                android:id="@+id/openingNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/openingNotes"
                android:textSize="12dp"
                android:padding="@dimen/activity_horizontal_margin"/>
            <android.support.v7.widget.ButtonBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/explore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/background_light"
                    android:text="Explore"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:textColor="@color/colorAccent" />
                <Button
                    android:id="@+id/quiz"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/background_light"
                    android:text="I already know Lombok"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:textColor="@color/colorAccent" />
            </android.support.v7.widget.ButtonBarLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/languageCorner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@color/white"
            android:padding="@dimen/activity_vertical_margin">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/learnMoreLocal"
                android:textSize="14dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/howAreYou"
                android:textSize="20dp"
                android:textColor="@color/black"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/howAreYouSasak"
                android:textSize="16dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/whatsup"
                android:textSize="20dp"
                android:textColor="@color/black"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/whatsupSasak"
                android:textSize="16dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/niceToMeetYou"
                android:textSize="20dp"
                android:textColor="@color/black"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/niceToMeetYouSasak"
                android:textSize="16dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/whereAreYouGoing"
                android:textSize="20dp"
                android:textColor="@color/black"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/whereAreYouGoingSasak"
                android:textSize="16dp"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/foodCorner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@color/white"
            android:padding="@dimen/activity_vertical_margin">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Lets Explore Local Cruisine!"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/activity_horizontal_margin">

                <ImageView
                    android:id="@+id/plecingImage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/plecingkangkung" />
                <TextView
                    android:id="@+id/plecingTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/plecingTitle"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:layout_toRightOf="@+id/plecingImage"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    />
                <TextView
                    android:id="@+id/plecingDesc"
                    android:layout_below="@id/plecingTitle"
                    android:layout_toRightOf="@id/plecingImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plecingDesc"
                    android:textSize="12dp"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    />

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/activity_horizontal_margin">

                <ImageView
                    android:id="@+id/sateBulayakImage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/satebulayak" />
                <TextView
                    android:id="@+id/sateBulayakTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/plecingTitle"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:layout_toRightOf="@+id/sateBulayakImage"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    />
                <TextView
                    android:id="@+id/sateBulayakDesc"
                    android:layout_below="@id/sateBulayakTitle"
                    android:layout_toRightOf="@id/sateBulayakImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sateBulayakDesc"
                    android:textSize="12dp"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    />

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/activity_horizontal_margin">

                <ImageView
                    android:id="@+id/ayamTaliwangImage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ayamtaliwang" />
                <TextView
                    android:id="@+id/ayamTaliwangTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ayamTaliwangTitle"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:layout_toRightOf="@+id/ayamTaliwangImage"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    />
                <TextView
                    android:id="@+id/ayamTaliwangDesc"
                    android:layout_below="@id/ayamTaliwangTitle"
                    android:layout_toRightOf="@id/ayamTaliwangImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ayamTaliwangDesc"
                    android:textSize="12dp"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/cultureCorner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@color/white"
            android:padding="@dimen/activity_vertical_margin">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Lets Explore Local Culture!"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/activity_horizontal_margin">

                <ImageView
                    android:id="@+id/bauNyaleImage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/baunyale" />
                <TextView
                    android:id="@+id/bauNyaleTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bauNyaleTitle"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:layout_toRightOf="@+id/bauNyaleImage"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    />

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/activity_horizontal_margin">
                <ImageView
                    android:id="@+id/preseanImage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/presean"
                    />
                <TextView
                    android:id="@+id/preseanTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/preseanTitle"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:layout_toRightOf="@id/preseanImage"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    />

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/activity_horizontal_margin">
                <ImageView
                    android:id="@+id/gendangBeleqImage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/gendangbeleq"
                    />
                <TextView
                    android:id="@+id/gendangBeleqTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gendangBeleqTitle"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:layout_toRightOf="@+id/gendangBeleqImage"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    />


            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>